--- a/pubesc.yaml
+++ b/pubesc.yaml
@@ -59,27 +59,16 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/simbolo.png
-    - assets/cancer.png
+    -  asset: assets/enfermaria.png
+    - asset: assets/caixinha.png
+     - asset: assets/imagem.png
+     - asset: assets/uti.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: assets/imagem.png
-  #       - asset: assets/uti.png
-          - asset: assets/enfermaria.png
-  #       - asset: assets/caixinha.png
   #        
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
