--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  sqflite: 
+  sqflite:
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +62,8 @@ flutter:
   assets:
     - assets/simbolo.png
     - assets/cancer.png
+    - assets/imagem.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
