--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ flutter:
   assets:
     - assets/icon_medico.png
     - assets/medico2.png
+    - assets/medica_cardio1.jpg
+    - assets/medica.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
