--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,7 @@ flutter:
   assets:
     - assets/icon_medico.png
     - assets/medico2.png
-    - assets/medica_cardio1.jpg
+    - assets/medica_cardio.jpg
     - assets/medica.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
