começando tela cadastro

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
     - assets/medico2.png
     - assets/medica_cardio.jpg
     - assets/medica.jpg
+    - assets/saude.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
