--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   google_fonts: ^6.3.1
   path: ^1.9.1
   sqflite: ^2.4.2
-  dio:
+  dio: ^5.7.0
+  google_maps_flutter: ^2.3.0
+  geocoding: ^4.0.0
 
 dev_dependencies:
   flutter_test:
